--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
+  bloc_test: ^9.1.0
+  test: ^1.21.6
+  equatable: ^2.0.5
 
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+#  flutter_test:
+#    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
